@@ -1,3 +1,8 @@
+2006-05-17  Martin Hawlisch  <Martin.Hawlisch@gmx.de>
+	* src/glade/gramps.glade, 
+	* src/TipOfDay.py: Use a gtk.Window instead of a Dialog to work
+	around the "Button not clickable again" gtk-bug. (closes #0000033)
+
 2006-05-16  Alex Roitman  <shura@gramps-project.org>
 	* src/glade/gramps.glade (select_person): Name the box.
 	* src/DataViews/_MediaView.py (row_change): Collect garbage on the
